<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical">

	<include layout="@layout/common_title" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin"
			android:orientation="vertical">

			<EditText
				android:id="@+id/edit_text"
				android:layout_width="match_parent"
				android:layout_height="40dp" />

			<Button
				android:id="@+id/btn_f1"
				style="@style/DebugButton"
				android:text="@string/server_f1"
				android:textAllCaps="false" />

			<Button
				android:id="@+id/btn_m1"
				style="@style/DebugButton"
				android:text="@string/server_m1" />

			<Button
				android:id="@+id/btn_102"
				style="@style/DebugButton"
				android:text="@string/server_102" />

			<Button
				android:id="@+id/btn_pre"
				style="@style/DebugButton"
				android:text="@string/server_pre" />

			<Button
				android:id="@+id/btn_release"
				style="@style/DebugButton"
				android:text="@string/server_release" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>